[package]
name = "proc-builder-pattern"
version = "0.1.0"
authors = ["Krouton <krouton@hatena.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full", "extra-traits"] }
derive_builder = "0.9.0"